examples/bison/c/ansi.c.grammar.output
State 333 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | INC_OP unary_expression
   17                 | DEC_OP unary_expression
   18                 | unary_operator cast_expression
   19                 | SIZEOF unary_expression
   20                 | SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'
   25               | '~'
   26               | '!'

   27 cast_expression: unary_expression
   28                | '(' type_name ')' cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression '*' cast_expression
   31                          | multiplicative_expression '/' cast_expression
   32                          | multiplicative_expression '%' cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression '+' multiplicative_expression
   35                    | additive_expression '-' multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression LEFT_OP additive_expression
   38                 | shift_expression RIGHT_OP additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression '<' shift_expression
   41                      | relational_expression '>' shift_expression
   42                      | relational_expression LE_OP shift_expression
   43                      | relational_expression GE_OP shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression EQ_OP relational_expression
   46                    | equality_expression NE_OP relational_expression

   47 and_expression: equality_expression
   48               | and_expression '&' equality_expression

   49 exclusive_or_expression: and_expression
   50                        | exclusive_or_expression '^' and_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression '|' exclusive_or_expression

   53 logical_and_expression: inclusive_or_expression
   54                       | logical_and_expression AND_OP inclusive_or_expression

   55 logical_or_expression: logical_and_expression
   56                      | logical_or_expression OR_OP logical_and_expression

   57 conditional_expression: logical_or_expression
   58                       | logical_or_expression '?' expression ':' conditional_expression

   59 assignment_expression: conditional_expression
   60                      | unary_expression assignment_operator assignment_expression

   61 assignment_operator: '='
   62                    | MUL_ASSIGN
   63                    | DIV_ASSIGN
   64                    | MOD_ASSIGN
   65                    | ADD_ASSIGN
   66                    | SUB_ASSIGN
   67                    | LEFT_ASSIGN
   68                    | RIGHT_ASSIGN
   69                    | AND_ASSIGN
   70                    | XOR_ASSIGN
   71                    | OR_ASSIGN

   72 expression: assignment_expression
   73           | expression ',' assignment_expression

   74 constant_expression: conditional_expression

   75 declaration: declaration_specifiers ';'
   76            | declaration_specifiers init_declarator_list ';'

   77 declaration_specifiers: storage_class_specifier
   78                       | storage_class_specifier declaration_specifiers
   79                       | type_specifier
   80                       | type_specifier declaration_specifiers
   81                       | type_qualifier
   82                       | type_qualifier declaration_specifiers

   83 init_declarator_list: init_declarator
   84                     | init_declarator_list ',' init_declarator

   85 init_declarator: declarator
   86                | declarator '=' initializer

   87 storage_class_specifier: TYPEDEF
   88                        | EXTERN
   89                        | STATIC
   90                        | AUTO
   91                        | REGISTER

   92 type_specifier: VOID
   93               | CHAR
   94               | SHORT
   95               | INT
   96               | LONG
   97               | FLOAT
   98               | DOUBLE
   99               | SIGNED
  100               | UNSIGNED
  101               | struct_or_union_specifier
  102               | enum_specifier
  103               | TYPE_NAME

  104 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  105                          | struct_or_union '{' struct_declaration_list '}'
  106                          | struct_or_union IDENTIFIER

  107 struct_or_union: STRUCT
  108                | UNION

  109 struct_declaration_list: struct_declaration
  110                        | struct_declaration_list struct_declaration

  111 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list
  113                         | type_specifier
  114                         | type_qualifier specifier_qualifier_list
  115                         | type_qualifier

  116 struct_declarator_list: struct_declarator
  117                       | struct_declarator_list ',' struct_declarator

  118 struct_declarator: declarator
  119                  | ':' constant_expression
  120                  | declarator ':' constant_expression

  121 enum_specifier: ENUM '{' enumerator_list '}'
  122               | ENUM IDENTIFIER '{' enumerator_list '}'
  123               | ENUM IDENTIFIER

  124 enumerator_list: enumerator
  125                | enumerator_list ',' enumerator

  126 enumerator: IDENTIFIER
  127           | IDENTIFIER '=' constant_expression

  128 type_qualifier: CONST
  129               | VOLATILE

  130 declarator: pointer direct_declarator
  131           | direct_declarator

  132 direct_declarator: IDENTIFIER
  133                  | '(' declarator ')'
  134                  | direct_declarator '[' constant_expression ']'
  135                  | direct_declarator '[' ']'
  136                  | direct_declarator '(' parameter_type_list ')'
  137                  | direct_declarator '(' identifier_list ')'
  138                  | direct_declarator '(' ')'

  139 pointer: '*'
  140        | '*' type_qualifier_list
  141        | '*' pointer
  142        | '*' type_qualifier_list pointer

  143 type_qualifier_list: type_qualifier
  144                    | type_qualifier_list type_qualifier

  145 parameter_type_list: parameter_list
  146                    | parameter_list ',' ELLIPSIS

  147 parameter_list: parameter_declaration
  148               | parameter_list ',' parameter_declaration

  149 parameter_declaration: declaration_specifiers declarator
  150                      | declaration_specifiers abstract_declarator
  151                      | declaration_specifiers

  152 identifier_list: IDENTIFIER
  153                | identifier_list ',' IDENTIFIER

  154 type_name: specifier_qualifier_list
  155          | specifier_qualifier_list abstract_declarator

  156 abstract_declarator: pointer
  157                    | direct_abstract_declarator
  158                    | pointer direct_abstract_declarator

  159 direct_abstract_declarator: '(' abstract_declarator ')'
  160                           | '[' ']'
  161                           | '[' constant_expression ']'
  162                           | direct_abstract_declarator '[' ']'
  163                           | direct_abstract_declarator '[' constant_expression ']'
  164                           | '(' ')'
  165                           | '(' parameter_type_list ')'
  166                           | direct_abstract_declarator '(' ')'
  167                           | direct_abstract_declarator '(' parameter_type_list ')'

  168 initializer: assignment_expression
  169            | '{' initializer_list '}'
  170            | '{' initializer_list ',' '}'

  171 initializer_list: initializer
  172                 | initializer_list ',' initializer

  173 statement: labeled_statement
  174          | compound_statement
  175          | expression_statement
  176          | selection_statement
  177          | iteration_statement
  178          | jump_statement

  179 labeled_statement: IDENTIFIER ':' statement
  180                  | CASE constant_expression ':' statement
  181                  | DEFAULT ':' statement

  182 compound_statement: '{' '}'
  183                   | '{' statement_list '}'
  184                   | '{' declaration_list '}'
  185                   | '{' declaration_list statement_list '}'

  186 declaration_list: declaration
  187                 | declaration_list declaration

  188 statement_list: statement
  189               | statement_list statement

  190 expression_statement: ';'
  191                     | expression ';'

  192 selection_statement: IF '(' expression ')' statement
  193                    | IF '(' expression ')' statement ELSE statement
  194                    | SWITCH '(' expression ')' statement

  195 iteration_statement: WHILE '(' expression ')' statement
  196                    | DO statement WHILE '(' expression ')' ';'
  197                    | FOR '(' expression_statement expression_statement ')' statement
  198                    | FOR '(' expression_statement expression_statement expression ')' statement

  199 jump_statement: GOTO IDENTIFIER ';'
  200               | CONTINUE ';'
  201               | BREAK ';'
  202               | RETURN ';'
  203               | RETURN expression ';'

  204 translation_unit: external_declaration
  205                 | translation_unit external_declaration

  206 external_declaration: function_definition
  207                     | declaration

  208 function_definition: declaration_specifiers declarator declaration_list compound_statement
  209                    | declaration_specifiers declarator compound_statement
  210                    | declarator declaration_list compound_statement
  211                    | declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 26
    '%' (37) 32
    '&' (38) 21 48
    '(' (40) 4 7 8 20 28 133 136 137 138 159 164 165 166 167 192 193 194 195 196 197 198
    ')' (41) 4 7 8 20 28 133 136 137 138 159 164 165 166 167 192 193 194 195 196 197 198
    '*' (42) 22 30 139 140 141 142
    '+' (43) 23 34
    ',' (44) 14 73 84 117 125 146 148 153 170 172
    '-' (45) 24 35
    '.' (46) 9
    '/' (47) 31
    ':' (58) 58 119 120 179 180 181
    ';' (59) 75 76 111 190 191 196 199 200 201 202 203
    '<' (60) 40
    '=' (61) 61 86 127
    '>' (62) 41
    '?' (63) 58
    '[' (91) 6 134 135 160 161 162 163
    ']' (93) 6 134 135 160 161 162 163
    '^' (94) 50
    '{' (123) 104 105 121 122 169 170 182 183 184 185
    '|' (124) 52
    '}' (125) 104 105 121 122 169 170 182 183 184 185
    '~' (126) 25
    error (256)
    IDENTIFIER (258) 1 9 10 104 106 122 123 126 127 132 152 153 179 199
    CONSTANT (259) 2
    STRING_LITERAL (260) 3
    SIZEOF (261) 19 20
    PTR_OP (262) 10
    INC_OP (263) 11 16
    DEC_OP (264) 12 17
    LEFT_OP (265) 37
    RIGHT_OP (266) 38
    LE_OP (267) 42
    GE_OP (268) 43
    EQ_OP (269) 45
    NE_OP (270) 46
    AND_OP (271) 54
    OR_OP (272) 56
    MUL_ASSIGN (273) 62
    DIV_ASSIGN (274) 63
    MOD_ASSIGN (275) 64
    ADD_ASSIGN (276) 65
    SUB_ASSIGN (277) 66
    LEFT_ASSIGN (278) 67
    RIGHT_ASSIGN (279) 68
    AND_ASSIGN (280) 69
    XOR_ASSIGN (281) 70
    OR_ASSIGN (282) 71
    TYPE_NAME (283) 103
    TYPEDEF (284) 87
    EXTERN (285) 88
    STATIC (286) 89
    AUTO (287) 90
    REGISTER (288) 91
    CHAR (289) 93
    SHORT (290) 94
    INT (291) 95
    LONG (292) 96
    SIGNED (293) 99
    UNSIGNED (294) 100
    FLOAT (295) 97
    DOUBLE (296) 98
    CONST (297) 128
    VOLATILE (298) 129
    VOID (299) 92
    STRUCT (300) 107
    UNION (301) 108
    ENUM (302) 121 122 123
    ELLIPSIS (303) 146
    CASE (304) 180
    DEFAULT (305) 181
    IF (306) 192 193
    ELSE (307) 193
    SWITCH (308) 194
    WHILE (309) 195 196
    DO (310) 196
    FOR (311) 197 198
    GOTO (312) 199
    CONTINUE (313) 200
    BREAK (314) 201
    RETURN (315) 202 203


Nonterminals, with rules where they appear

    $accept (85)
        on left: 0
    primary_expression (86)
        on left: 1 2 3 4
        on right: 5
    postfix_expression (87)
        on left: 5 6 7 8 9 10 11 12
        on right: 6 7 8 9 10 11 12 15
    argument_expression_list (88)
        on left: 13 14
        on right: 8 14
    unary_expression (89)
        on left: 15 16 17 18 19 20
        on right: 16 17 19 27 60
    unary_operator (90)
        on left: 21 22 23 24 25 26
        on right: 18
    cast_expression (91)
        on left: 27 28
        on right: 18 28 29 30 31 32
    multiplicative_expression (92)
        on left: 29 30 31 32
        on right: 30 31 32 33 34 35
    additive_expression (93)
        on left: 33 34 35
        on right: 34 35 36 37 38
    shift_expression (94)
        on left: 36 37 38
        on right: 37 38 39 40 41 42 43
    relational_expression (95)
        on left: 39 40 41 42 43
        on right: 40 41 42 43 44 45 46
    equality_expression (96)
        on left: 44 45 46
        on right: 45 46 47 48
    and_expression (97)
        on left: 47 48
        on right: 48 49 50
    exclusive_or_expression (98)
        on left: 49 50
        on right: 50 51 52
    inclusive_or_expression (99)
        on left: 51 52
        on right: 52 53 54
    logical_and_expression (100)
        on left: 53 54
        on right: 54 55 56
    logical_or_expression (101)
        on left: 55 56
        on right: 56 57 58
    conditional_expression (102)
        on left: 57 58
        on right: 58 59 74
    assignment_expression (103)
        on left: 59 60
        on right: 13 14 60 72 73 168
    assignment_operator (104)
        on left: 61 62 63 64 65 66 67 68 69 70 71
        on right: 60
    expression (105)
        on left: 72 73
        on right: 4 6 58 73 191 192 193 194 195 196 198 203
    constant_expression (106)
        on left: 74
        on right: 119 120 127 134 161 163 180
    declaration (107)
        on left: 75 76
        on right: 186 187 207
    declaration_specifiers (108)
        on left: 77 78 79 80 81 82
        on right: 75 76 78 80 82 149 150 151 208 209
    init_declarator_list (109)
        on left: 83 84
        on right: 76 84
    init_declarator (110)
        on left: 85 86
        on right: 83 84
    storage_class_specifier (111)
        on left: 87 88 89 90 91
        on right: 77 78
    type_specifier (112)
        on left: 92 93 94 95 96 97 98 99 100 101 102 103
        on right: 79 80 112 113
    struct_or_union_specifier (113)
        on left: 104 105 106
        on right: 101
    struct_or_union (114)
        on left: 107 108
        on right: 104 105 106
    struct_declaration_list (115)
        on left: 109 110
        on right: 104 105 110
    struct_declaration (116)
        on left: 111
        on right: 109 110
    specifier_qualifier_list (117)
        on left: 112 113 114 115
        on right: 111 112 114 154 155
    struct_declarator_list (118)
        on left: 116 117
        on right: 111 117
    struct_declarator (119)
        on left: 118 119 120
        on right: 116 117
    enum_specifier (120)
        on left: 121 122 123
        on right: 102
    enumerator_list (121)
        on left: 124 125
        on right: 121 122 125
    enumerator (122)
        on left: 126 127
        on right: 124 125
    type_qualifier (123)
        on left: 128 129
        on right: 81 82 114 115 143 144
    declarator (124)
        on left: 130 131
        on right: 85 86 118 120 133 149 208 209 210 211
    direct_declarator (125)
        on left: 132 133 134 135 136 137 138
        on right: 130 131 134 135 136 137 138
    pointer (126)
        on left: 139 140 141 142
        on right: 130 141 142 156 158
    type_qualifier_list (127)
        on left: 143 144
        on right: 140 142 144
    parameter_type_list (128)
        on left: 145 146
        on right: 136 165 167
    parameter_list (129)
        on left: 147 148
        on right: 145 146 148
    parameter_declaration (130)
        on left: 149 150 151
        on right: 147 148
    identifier_list (131)
        on left: 152 153
        on right: 137 153
    type_name (132)
        on left: 154 155
        on right: 20 28
    abstract_declarator (133)
        on left: 156 157 158
        on right: 150 155 159
    direct_abstract_declarator (134)
        on left: 159 160 161 162 163 164 165 166 167
        on right: 157 158 162 163 166 167
    initializer (135)
        on left: 168 169 170
        on right: 86 171 172
    initializer_list (136)
        on left: 171 172
        on right: 169 170 172
    statement (137)
        on left: 173 174 175 176 177 178
        on right: 179 180 181 188 189 192 193 194 195 196 197 198
    labeled_statement (138)
        on left: 179 180 181
        on right: 173
    compound_statement (139)
        on left: 182 183 184 185
        on right: 174 208 209 210 211
    declaration_list (140)
        on left: 186 187
        on right: 184 185 187 208 210
    statement_list (141)
        on left: 188 189
        on right: 183 185 189
    expression_statement (142)
        on left: 190 191
        on right: 175 197 198
    selection_statement (143)
        on left: 192 193 194
        on right: 176
    iteration_statement (144)
        on left: 195 196 197 198
        on right: 177
    jump_statement (145)
        on left: 199 200 201 202 203
        on right: 178
    translation_unit (146)
        on left: 204 205
        on right: 0 205
    external_declaration (147)
        on left: 206 207
        on right: 204 205
    function_definition (148)
        on left: 208 209 210 211
        on right: 206


State 0

    0 $accept: • translation_unit $end

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    translation_unit           go to state 35
    external_declaration       go to state 36
    function_definition        go to state 37


State 1

  132 direct_declarator: IDENTIFIER •

    $default  reduce using rule 132 (direct_declarator)


State 2

  103 type_specifier: TYPE_NAME •

    $default  reduce using rule 103 (type_specifier)


State 3

   87 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 87 (storage_class_specifier)


State 4

   88 storage_class_specifier: EXTERN •

    $default  reduce using rule 88 (storage_class_specifier)


State 5

   89 storage_class_specifier: STATIC •

    $default  reduce using rule 89 (storage_class_specifier)


State 6

   90 storage_class_specifier: AUTO •

    $default  reduce using rule 90 (storage_class_specifier)


State 7

   91 storage_class_specifier: REGISTER •

    $default  reduce using rule 91 (storage_class_specifier)


State 8

   93 type_specifier: CHAR •

    $default  reduce using rule 93 (type_specifier)


State 9

   94 type_specifier: SHORT •

    $default  reduce using rule 94 (type_specifier)


State 10

   95 type_specifier: INT •

    $default  reduce using rule 95 (type_specifier)


State 11

   96 type_specifier: LONG •

    $default  reduce using rule 96 (type_specifier)


State 12

   99 type_specifier: SIGNED •

    $default  reduce using rule 99 (type_specifier)


State 13

  100 type_specifier: UNSIGNED •

    $default  reduce using rule 100 (type_specifier)


State 14

   97 type_specifier: FLOAT •

    $default  reduce using rule 97 (type_specifier)


State 15

   98 type_specifier: DOUBLE •

    $default  reduce using rule 98 (type_specifier)


State 16

  128 type_qualifier: CONST •

    $default  reduce using rule 128 (type_qualifier)


State 17

  129 type_qualifier: VOLATILE •

    $default  reduce using rule 129 (type_qualifier)


State 18

   92 type_specifier: VOID •

    $default  reduce using rule 92 (type_specifier)


State 19

  107 struct_or_union: STRUCT •

    $default  reduce using rule 107 (struct_or_union)


State 20

  108 struct_or_union: UNION •

    $default  reduce using rule 108 (struct_or_union)


State 21

  121 enum_specifier: ENUM • '{' enumerator_list '}'
  122               | ENUM • IDENTIFIER '{' enumerator_list '}'
  123               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


State 22

  133 direct_declarator: '(' • declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declarator         go to state 40
    direct_declarator  go to state 33
    pointer            go to state 34


State 23

  139 pointer: '*' •
  140        | '*' • type_qualifier_list
  141        | '*' • pointer
  142        | '*' • type_qualifier_list pointer

    CONST     shift, and go to state 16
    VOLATILE  shift, and go to state 17
    '*'       shift, and go to state 23

    $default  reduce using rule 139 (pointer)

    type_qualifier       go to state 41
    pointer              go to state 42
    type_qualifier_list  go to state 43


State 24

  207 external_declaration: declaration •

    $default  reduce using rule 207 (external_declaration)


State 25

   75 declaration: declaration_specifiers • ';'
   76            | declaration_specifiers • init_declarator_list ';'
  208 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  209                    | declaration_specifiers • declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23
    ';'         shift, and go to state 44

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 33
    pointer               go to state 34


State 26

   77 declaration_specifiers: storage_class_specifier •
   78                       | storage_class_specifier • declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 27

   79 declaration_specifiers: type_specifier •
   80                       | type_specifier • declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 28

  101 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 101 (type_specifier)


State 29

  104 struct_or_union_specifier: struct_or_union • IDENTIFIER '{' struct_declaration_list '}'
  105                          | struct_or_union • '{' struct_declaration_list '}'
  106                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 50
    '{'         shift, and go to state 51


State 30

  102 type_specifier: enum_specifier •

    $default  reduce using rule 102 (type_specifier)


State 31

   81 declaration_specifiers: type_qualifier •
   82                       | type_qualifier • declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 32

  210 function_definition: declarator • declaration_list compound_statement
  211                    | declarator • compound_statement

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21
    '{'        shift, and go to state 53

    declaration                go to state 54
    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    compound_statement         go to state 56
    declaration_list           go to state 57


State 33

  131 declarator: direct_declarator •
  134 direct_declarator: direct_declarator • '[' constant_expression ']'
  135                  | direct_declarator • '[' ']'
  136                  | direct_declarator • '(' parameter_type_list ')'
  137                  | direct_declarator • '(' identifier_list ')'
  138                  | direct_declarator • '(' ')'

    '('  shift, and go to state 58
    '['  shift, and go to state 59

    $default  reduce using rule 131 (declarator)


State 34

  130 declarator: pointer • direct_declarator

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22

    direct_declarator  go to state 60


State 35

    0 $accept: translation_unit • $end
  205 translation_unit: translation_unit • external_declaration

    $end        shift, and go to state 61
    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    external_declaration       go to state 62
    function_definition        go to state 37


State 36

  204 translation_unit: external_declaration •

    $default  reduce using rule 204 (translation_unit)


State 37

  206 external_declaration: function_definition •

    $default  reduce using rule 206 (external_declaration)


State 38

  122 enum_specifier: ENUM IDENTIFIER • '{' enumerator_list '}'
  123               | ENUM IDENTIFIER •

    '{'  shift, and go to state 63

    $default  reduce using rule 123 (enum_specifier)


State 39

  121 enum_specifier: ENUM '{' • enumerator_list '}'

    IDENTIFIER  shift, and go to state 64

    enumerator_list  go to state 65
    enumerator       go to state 66


State 40

  133 direct_declarator: '(' declarator • ')'

    ')'  shift, and go to state 67


State 41

  143 type_qualifier_list: type_qualifier •

    $default  reduce using rule 143 (type_qualifier_list)


State 42

  141 pointer: '*' pointer •

    $default  reduce using rule 141 (pointer)


State 43

  140 pointer: '*' type_qualifier_list •
  142        | '*' type_qualifier_list • pointer
  144 type_qualifier_list: type_qualifier_list • type_qualifier

    CONST     shift, and go to state 16
    VOLATILE  shift, and go to state 17
    '*'       shift, and go to state 23

    $default  reduce using rule 140 (pointer)

    type_qualifier  go to state 68
    pointer         go to state 69


State 44

   75 declaration: declaration_specifiers ';' •

    $default  reduce using rule 75 (declaration)


State 45

   76 declaration: declaration_specifiers init_declarator_list • ';'
   84 init_declarator_list: init_declarator_list • ',' init_declarator

    ','  shift, and go to state 70
    ';'  shift, and go to state 71


State 46

   83 init_declarator_list: init_declarator •

    $default  reduce using rule 83 (init_declarator_list)


State 47

   85 init_declarator: declarator •
   86                | declarator • '=' initializer
  208 function_definition: declaration_specifiers declarator • declaration_list compound_statement
  209                    | declaration_specifiers declarator • compound_statement

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21
    '='        shift, and go to state 72
    '{'        shift, and go to state 53

    $default  reduce using rule 85 (init_declarator)

    declaration                go to state 54
    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    compound_statement         go to state 73
    declaration_list           go to state 74


State 48

   78 declaration_specifiers: storage_class_specifier declaration_specifiers •

    $default  reduce using rule 78 (declaration_specifiers)


State 49

   80 declaration_specifiers: type_specifier declaration_specifiers •

    $default  reduce using rule 80 (declaration_specifiers)


State 50

  104 struct_or_union_specifier: struct_or_union IDENTIFIER • '{' struct_declaration_list '}'
  106                          | struct_or_union IDENTIFIER •

    '{'  shift, and go to state 75

    $default  reduce using rule 106 (struct_or_union_specifier)


State 51

  105 struct_or_union_specifier: struct_or_union '{' • struct_declaration_list '}'

    TYPE_NAME  shift, and go to state 2
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    type_specifier             go to state 76
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    struct_declaration_list    go to state 77
    struct_declaration         go to state 78
    specifier_qualifier_list   go to state 79
    enum_specifier             go to state 30
    type_qualifier             go to state 80


State 52

   82 declaration_specifiers: type_qualifier declaration_specifiers •

    $default  reduce using rule 82 (declaration_specifiers)


State 53

  182 compound_statement: '{' • '}'
  183                   | '{' • statement_list '}'
  184                   | '{' • declaration_list '}'
  185                   | '{' • declaration_list statement_list '}'
